# app1

./: README.rst  pyproject.toml
app1/: calculator.py  fast_api.py  stream_lit.py
tests/: test_app1.py
