[tool.poetry]
name = "app1"
version = "0.1.0"
description = ""
authors = ["bogibee2 <bhageerath.bogi2@shipt.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.28.1"
pandas = "^1.5.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
streamlit = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
